--- a/static/main.css
+++ b/static/main.css
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700,300&subset=latin,cyrillic);
-@import url(https://fonts.googleapis.com/css?family=Lobster);
+@import url(//fonts.googleapis.com/css?family=Open+Sans+Condensed:700,300&subset=latin,cyrillic);
+@import url(//fonts.googleapis.com/css?family=Lobster);
 
 * {
 	margin: 0;
